Oct 8:
    * Changes from the October 7th build 9.0.2.36165 are included.
        * Adaptive Swarm damage increased by 22%
    * Changes from the October 7th hotfix to PTR build 9.0.1.36131 are included.
        * Shooting Stars proc rate increased to 15% and grants 3 AP per proc
        * Soul of the Forest AP bonus to Wrath increased to 50%, AoE damage bonus to Starfire increased to 150%
        * Starlord grants 4% haste per stack and lasts 15 seconds
        * Balance Druid spec-wide aura changed from -18% to -8%
    * Kyrian accounts for 15% of pool being lost to damage taken
    * Precise Alignment conduit removed from base profiles

Oct 1:
    * Changes from the September 30th build 9.0.2.36086 are included.
    * Conduits are set to rank 7

Sep 23:
    * APL optimizations for DoTs, AoE, CD timings, and Kindred Spirits
    * Further optimization may be possible to the APL - if you discover an improvement, please submit a report
    * Add full enchants to the base profile
    * Change base profile race to Troll

Sep 18:
    * Changes from the September 17th build 9.0.2.35938 are included.
        * Lunar Eclipse now grants 20% crit to Starfire
        * Soul of the Forest doubles Starfire splash damage
        * Sunfire/Moonfire damage increased by 20%
        * Mastery nerfed by ~21%
        * Kindreds Spirits is now off the GCD
        * Celestial Alignment/Incarnation nerfed to 10% haste
        * Feast of Gluttonous Hedonism nerfed from 72 Int to 20 Int
    * Further optimization may be possible to the APL. If you discover an improvement, please submit a report.
    * Any changes to spell selection for Convoke the Spirits remains to be investigated.
    * Add trinkets from Sire Denathrius to the base profile.

Sep 13:
    * Add '1T Move' selection for approximation of random light movement.
    * Add '1T Move' events to the 'Dungeon' script
    * Base profile updated with:
        * All items are from Mythic Castle Nathira, except for placeholder trinkets