@@ -56,7 +56,7 @@
           </select>
         </div>
         <div><iframe id="frame2" src="by_combo_1.html" style="border:none; font-family:monospace; font-size:large; width:45ch; height:30em;"></iframe></div>
-        <div style="text-align:center; font-size:larger; margin-top:1em; margin-bottom:0.5em;"><a style="text-decoration:underline;" href="md.html?file=faq.txt" target="simframe" onclick="setTitle('Frequently Asked Questions')"><b>FAQ (Updated October 8th, 2020)</b></a></div>
+        <div style="text-align:center; font-size:larger; margin-top:1em; margin-bottom:0.5em;"><a style="text-decoration:underline;" href="md.html?file=faq.txt" target="simframe" onclick="setTitle('Frequently Asked Questions')"><b>FAQ (Updated October 16th, 2020)</b></a></div>
         <div style="text-align:center; font-size:larger; margin-top:0.5em; margin-bottom:0.5em;"><a style="text-decoration:underline;" href="md.html?file=balance.txt" target="simframe" onclick="setTitle('Balance APL')"><b>Shadowlands BETA Balance APL</b></a></div>
         <div style="text-align:center; font-size:larger; margin-top:0.5em; margin-bottom:1em;"><a style="text-decoration:underline;" href="https://github.com/balance-simc/Balance-SimC/issues/new/choose"><b>Bugs/Improvements/Questions</b></a></div>
         <div id="dir"></div>
